Project/env/INGRESS-monitoring.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"monitoring","namespace":"monitoring"},"spec":{"ingressClassName":"nginx","rules":[{"host":"grafana.project.local","http":{"paths":[{"backend":{"service":{"name":"stable-grafana","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
  creationTimestamp: "2022-12-03T13:37:35Z"
  generation: 1
  name: monitoring
  namespace: monitoring
  resourceVersion: "5766"
  uid: b9fff2eb-b939-4ea0-9905-642c8810a14d
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.project.local
    http:
      paths:
      - backend:
          service:
            name: stable-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.59.102
