Project/env/ingress-test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: app-project
spec:
  ingressClassName: nginx
  rules:
    - host: project.local
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: app-project 
                port:
                  number: 80
            path: /
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: app-project
  namespace: app-project
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: app-project
  namespace: app-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web 
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: app 
        image: nginxdemos/hello
        ports:
        - containerPort: 80
